fix: Adjust spacing of select components & tidy

--- a/src/styles/ow-label.scss
+++ b/src/styles/ow-label.scss
@@ -4,4 +4,5 @@
   text-align:center;
   color:$main-text;
   font-size: 0.8em;
+  margin:0.75em;
 }
