--- a/src/styles/ow-platform-select.scss
+++ b/src/styles/ow-platform-select.scss
@@ -1,5 +1,5 @@
 .ow-platform-select{
-  margin:2em;
+
   .icon-listbox{
     display:flex;
     flex-direction: horizontal;
